<resources>
    <string name="app_name">ComicsClub</string>
    <string name="btn_mapa">MAPS</string>
    <string name="btn_listview">LISTA</string>
    <string name="btn_MAPS"><b>TIENDAS</b></string>
    <string name="btn_GAME"><b>COMICS</b></string>
    <string name="location_search">Escribe cualquier lugar aquí</string>
    <string name="txt_fav">FAVORITOS</string>
    <string name="txt_tiendas">TIENDAS CERCANAS</string>
    <string name="txt_tiendasCercanas">TIENDAS CERCA DE TI</string>
    <string name="txt_spDistancia">RANGO DE DISTANCIA</string>
    <string name="txt_spValoracion">RANGO DE VALORACION</string>
    <string name="txt_spPrecio">RANGO DE PRECIO</string>
    <string name="txt_scShopping">CENTRO COMERCIAL</string>
    <string name="txt_scBook">LIBRERIA</string>
    <string name="btn_FILTROTIENDAS">APLICAR FILTROS</string>
    <string name="btn_FILTROSCOMICS">APLICAR FILTROS</string>
    <string name="txt_filtros">FILTROS</string>




    <string-array name="sp_distancias">
        <item>500 metros</item>
        <item>1 km</item>
        <item>2 kms</item>
        <item>5 kms</item>
        <item>10 kms</item>
        <item>50 kms</item>
    </string-array>

    <string-array name="sp_valoracion">
        <item>0.0</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
    </string-array>

    <string-array name="sp_precio">
        <item>5.0 €</item>
        <item>8.0 €</item>
        <item>10.0 €</item>
        <item>20.0 €</item>
    </string-array>



</resources>
