<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"

    android:orientation="vertical"
    tools:context=".FiltroTiendas">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"

        android:layout_gravity="center_vertical"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="FILTROS"
            android:textColor="@color/black"

            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"

            ></TextView>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

   android:layout_gravity="center"
    android:gravity="center"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:paddingRight="40dp"
        android:layout_margin="8dp"


        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="@string/txt_spDistancia"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_spinner_text_color"

            android:layout_weight="3"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/black"


            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:paddingRight="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txt_spValoracion"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/spValoración"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/my_spinner_text_color"

            android:layout_weight="3"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/black"


            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="18dp"
        android:background="@color/red_s"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/txt_scBook"
                android:textColor="@color/colorWhite" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/swlibreria"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_scShopping"
            android:textColor="@color/colorWhite" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/swcentrocomercial"
            />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_FILTROTIENDAS"
            android:textSize="24dp"
            android:textColor="@color/red"
            android:id="@+id/btn_FILTROS"
            android:padding="11dp"

            android:background="@color/gris"></Button>
    </LinearLayout>

</LinearLayout>

